fix link jump: ../../ ==> ../

--- a/2023.1.1/_static/custom.css
+++ b/2023.1.1/_static/custom.css
@@ -1,6 +1,6 @@
 /* set color of version navigator to yellow */
 div.version a {
-    color: hsla(0,0%,100%,.3);
+    color: hsla(0, 0%, 100%, 0.3);
 }
 div.version p {
     color: #FFFF00;
